# Archive

gk/: Camera.cpp  Camera.hpp  Character.cpp  Character.hpp  Crosshair.cpp  Crosshair.hpp  FPSCounter.cpp  FPSCounter.hpp  HUDElement.cpp  HUDElement.hpp  HUDManager.cpp  HUDManager.hpp  cache.cpp  cache.hpp  camera.cpp  camera.hpp  cuboid.cpp  cuboid.hpp  display.cpp  display.hpp  door.cpp  door.hpp  fps_counter.cpp  fps_counter.hpp  game.cpp  game.hpp  gk.sln  gk.vcproj  group.cpp  (+26 more)
ok/src/: Makefile.am  Makefile.in  branch.cpp  branch.vcproj  brute.cpp  brute.vcproj  cmax.vcproj  common.cpp  common.hpp  data.cpp  data.hpp  generate  generate2  generator.cpp  generator.vcproj  input.txt  merge  merge2  merge3  move.cpp  move.hpp  order.cpp  order.hpp  schedule.cpp  schedule.hpp  stdafx.cpp  stdafx.h  tabu-Move-Tabulist-r76  tabu-Move-Tabulist2-r76  tabu-MoveSwap-Tabulist-r76  tabu-MoveSwap-Tabulist2-r76  tabu-MoveTask-Tabulist-r76  tabu-MoveTask-Tabulist2-r76  tabu.cpp  tabu.vcproj  tabulist.cpp  tabulist.hpp  tabusearch.cpp  tabusearch.hpp  test  (+7 more)
ok/src/Debuger/: main.~pas  vd.dof  vd.~dpr  vd.~dsk
ok/src/debugger/: main.dcu  main.dfm  main.pas  test.txt  vd.dpr  vd.dsk
ok/src/generator/: generator.cpp
ok/src/generator/Debug/: BuildLog.htm  mt.dep  vc80.idb
put/s3/ok/src/: Makefile.am  branch.cpp  brute.cpp  brute.vcproj  cmax.cpp  data.cpp  data.hpp  generate  generator.vcproj  merge  merge2  move.cpp  order.cpp  schedule.cpp  tabu.cpp  tabu.vcproj  tabulist.cpp  tabusearch.hpp  test  verify.hpp  wodz.cpp
put/s3/ok/src/debugger/: main.dcu  main.dfm  vd.dsk
(+6684 files in other folders)
