noinst_PROGRAMS = generator brute tabu cmax wodz branch
generator_SOURCES = generator.cpp data.cpp
brute_SOURCES = brute.cpp data.cpp schedule.cpp verify.cpp
tabu_SOURCES = tabu.cpp tabusearch.cpp tabulist.cpp move.cpp data.cpp schedule.cpp 
cmax_SOURCES = cmax.cpp data.cpp
wodz_SOURCES = wodz.cpp data.cpp schedule.cpp verify.cpp
branch_SOURCES = branch.cpp order.cpp tabusearch.cpp tabulist.cpp move.cpp data.cpp schedule.cpp